Add Sentry logic and hot reloading for reducers

--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <title>Reduxstagram</title>
     <link rel="shortcut icon" type="image/png" href="http://wes.io/ehRe/my-favourite-icon.png"/>
-
+    <script src="https://cdn.ravenjs.com/3.14.2/raven.min.js"
+    Raven.config('https://041a9aa77a294b3394d8c81e50b399af@sentry.io/162924').install()
+    crossorigin="anonymous"></script>
   </head>
   <body>
     <div id="root"></div>
